--- a/BeerAdvisor/app/src/main/res/values/strings.xml
+++ b/BeerAdvisor/app/src/main/res/values/strings.xml
@@ -1,5 +1,10 @@
 <resources>
     <string-array name="brands">No beer selected</string-array>
-    <string-array name="beer_colors"><item>lights</item><item>amber</item><item>brown</item><item>dark</item></string-array>
+    <string-array name="beer_colors">
+        <item>lights</item>
+        <item>amber</item>
+        <item>brown</item>
+        <item>dark</item>
+        </string-array>
     <string name="app_name">app_name</string>
 </resources>
