--- a/BeerAdvisor/app/src/main/res/values/strings.xml
+++ b/BeerAdvisor/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
         <item>dark</item>
         </string-array>
     <string name="app_name">app_name</string>
+    <string name="button">Button</string>
 </resources>
