--- a/Portfolio/app/src/main/res/values/strings.xml
+++ b/Portfolio/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">CityGuide</string>
+    <string name="logo_name">Get A Way</string>
+    <string name="slogan_name">We will help you to find your way</string>
+    <string name="power_by">Powered by Nahom</string>
 </resources>
